Fixed gray bar showing up on mobile and fixed chevron being misplaced on accordion

--- a/_sass/components/getting-started-page.scss
+++ b/_sass/components/getting-started-page.scss
@@ -150,6 +150,7 @@
   @media #{$bp-below-mobile} {
     margin-top: 20px;
     min-width: 255px;
+    font-size: 16px;
   }
 }
 
